--- a/app/index.html
+++ b/app/index.html
@@ -34,11 +34,11 @@
 <a href="#" id="menu-icon"></a>
 <ul ng-controller="PanelCtrl as panel">
 <li><a href ng-click="panel.choosePath(1)" class="current">Login</a></li>
-<li><a href ng-click="panel.choosePath(2)">Become observer</a></li>
-<li><a href ng-click="panel.choosePath(3)">Species</a></li>
-<li><a href ng-click="panel.choosePath(4)">Observers</a></li>
-<li><a href ng-click="panel.choosePath(8)">My observations</a></li>
-<li><a href ng-click="panel.choosePath(9)">Administrators</a></li>
+<li><a href ng-click="panel.choosePath(2)" class="menu">Become observer</a></li>
+<li><a href ng-click="panel.choosePath(3)" class="menu">Species</a></li>
+<li><a href ng-click="panel.choosePath(4)" class="menu">Observers</a></li>
+<li><a href ng-click="panel.choosePath(8)" class="menu">My observations</a></li>
+<li><a href ng-click="panel.choosePath(9)" class="menu">Administrators</a></li>
 </ul>
 </nav>
 
