--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="./src/css/pure-release-0.6.0/pure.css">
   <link rel="stylesheet" href="./src/css/gallery.css">
-  <link rel="stylesheet" href="./src/css/app.css">
+<!--  <link rel="stylesheet" href="./src/css/app.css">  -->
   <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
 <![endif]-->
