--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <![endif]-->
 <!--[if gt IE 8]><!-->
 <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css">
+<link rel="stylesheet" href="./node_modules/leaflet-draw/dist/leaflet.draw.css">
   <link rel="stylesheet" href="./src/css/pure-release-0.6.0/grids-responsive-min.css">
   <!--<![endif]-->
 
