--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="css/pure-release-0.6.0/pure.css">
   <link rel="stylesheet" href="css/gallery.css">
-  <!-- <link rel="stylesheet" href="css/app.css"> -->
+  <link rel="stylesheet" href="css/app.css"> 
   <link rel="stylesheet" href="../node_modules/formula/dist/formula.min.css">
 
   <!--[if lte IE 8]>
@@ -32,7 +32,7 @@
   <a href="http://www.npolar.no/no/tjenester/mms/index.html" id="logo"></a>
 
 
-<nav>
+<nav class="menu">
 <a href="#" id="menu-icon"></a>
 <ul ng-controller="PanelCtrl as panel">
 <li><a href ng-click="panel.choosePath(1)" class="current">Login</a></li>
