--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
   <script src="./js/controllers_admin.js"></script>
   <script src="./js/services.js"></script>
   <script src="./js/directives.js"></script>
+  <script src="./js/routes.js"></script>
   <script src="../bower_components/leaflet/leaflet.js"></script>
   <script src="../bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
   <script src="../bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
