--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 <section>
 <div ng-view></div>
-<script src="./dist/undefined/app.js"></script>
+<!--<script src="./dist/undefined/app.js"></script> -->
+<script src="bundle.js"></script>
 </section>
 
 
