--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 
 </head>
 
-<body class="container" ng-controller="SightingCtrl as sighting">
-
+<!--<body class="container" ng-controller="SightingCtrl as sighting">-->
+<body class="container">
 
 <br />
 
@@ -39,8 +39,8 @@
 <li><a href ng-click="panel.choosePath(2)" class="menu">Become observer</a></li>
 <li><a href ng-click="panel.choosePath(3)" class="menu">Species</a></li>
 <li><a href ng-click="panel.choosePath(4)" class="menu">Observers</a></li>
-<li><a href ng-click="panel.choosePath(8)" class="menu">My observations</a></li>
-<li><a href ng-click="panel.choosePath(9)" class="menu">Administrators</a></li>
+<li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath(8)" class="menu">My observations</a></li>
+<li ng-if="security.isAuthenticated()"><a href ng-click="panel.choosePath(9)" class="menu">Administrators</a></li>
 </ul>
 </nav>
 
