formula translations file added

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/assets/leaflet.css">
   <link rel="stylesheet" href="/assets/leaflet.draw.css">
   <link rel="stylesheet" href="/assets/grids-responsive-min.css">
+  <link rel="stylesheet" href="/assets/formula.min.css">
   <!--<![endif]-->
 
 </head>
