--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   <a href="http://www.npolar.no/no/tjenester/mms/index.html" id="logo"></a>
 
 
-<nav>
+<nav id="nav_id">
 <a href="#" id="menu-icon"></a>
 <ul ng-controller="PanelCtrl as panel">
   <ul>
