--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en" ng-app="sighting" ng-strict-di>
 <head>
@@ -36,12 +37,12 @@
 <a href="#" id="menu-icon"></a>
 <ul ng-controller="PanelCtrl as panel">
   <ul>
-<li><a href ng-click="panel.choosePath(1)" class="current">Login</a></li>
-<li><a href ng-click="panel.choosePath(2)" class="menu">Become observer</a></li>
-<li><a href ng-click="panel.choosePath(3)" class="menu">Species</a></li>
-<li><a href ng-click="panel.choosePath(4)" class="menu">Observers</a></li>
-<li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath(8)" class="menu">My observations</a></li>
-<li ng-if="security.isAuthenticated()"><a href ng-click="panel.choosePath(9)" class="menu">Administrators</a></li>
+<li><a href ng-click="panel.choosePath('login')" class="current">Login</a></li>
+<li><a href ng-click="panel.choosePath('observe')" class="menu">Become observer</a></li>
+<li><a href ng-click="panel.choosePath('species')" class="menu">Species</a></li>
+<li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('observers')" class="menu">Observers</a></li>
+<li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath(my_observations)" class="menu">My observations</a></li>
+<li ng-if="security.isAuthenticated()"><a href ng-click="panel.choosePath('admin')" class="menu">Administrators</a></li>
 </ul>
 </nav>
 
@@ -50,8 +51,8 @@
 <section>
 <div ng-view></div>
 <script src="app.js"></script>
-<script lang="javascript" src="/assets/xlsx.js"></script>
-<script lang="javascript" src="/assets/jszip.js"></script>
+<!--<script lang="javascript" src="/assets/xlsx.js"></script>
+<script lang="javascript" src="/assets/jszip.js"></script>  -->
 </section>
 
 
