--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,8 @@
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
 <script lang="javascript" src="/assets/ods.js"></script>
-</body>
+<!-- <script src="/assets/leaflet/leaflet.js"></script>
+  <script src="/assets/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+  <script src="/assets/leaflet-draw/dist/leaflet.draw.js"></script>  -->
 
 </html>
