admin access almost fixed

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="/assets/grids-responsive-old-ie-min.css">
 <![endif]-->
 <!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="/assets/leaflet.css">
-  <link rel="stylesheet" href="/assets/leaflet.draw.css">
+<!--  <link rel="stylesheet" href="/assets/leaflet.css">  -->
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
+ <!-- <link rel="stylesheet" href="/assets/leaflet.draw.css">  -->
   <link rel="stylesheet" href="/assets/grids-responsive-min.css">
   <link rel="stylesheet" href="/assets/formula.min.css">
   <!--<![endif]-->
@@ -54,8 +55,12 @@
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
 <script lang="javascript" src="/assets/ods.js"></script>
-<!-- <script src="/assets/leaflet/leaflet.js"></script>
-  <script src="/assets/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
-  <script src="/assets/leaflet-draw/dist/leaflet.draw.js"></script>  -->
+<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+<script src="/assets/angular-leaflet-directive.min.js"></script>  -->
+<!-- <script src="/assets/leaflet.js"></script> -->
+  <script src="/assets/angular-leaflet-directive.js"></script>
+  <script src="/assets/leaflet.draw.js"></script>
+
 
 </html>
