admin login working

--- a/src/index.html
+++ b/src/index.html
@@ -51,16 +51,14 @@
 
 </section>
 <script src="app.js"></script>
-<script lang="javascript" src="/assets/shim.js"></script>
+<!--<script lang="javascript" src="/assets/shim.js"></script>
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
 <script lang="javascript" src="/assets/ods.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
-<script src="/assets/angular-leaflet-directive.min.js"></script>  -->
-<!-- <script src="/assets/leaflet.js"></script> -->
-  <script src="/assets/angular-leaflet-directive.js"></script>
-  <script src="/assets/leaflet.draw.js"></script>
+<script src="/assets/angular-simple-logger/dist/angular-simple-logger.js"></script>
+ <script src="/assets/angular-leaflet-directive.js"></script>
+  <script src="/assets/leaflet.draw.js"></script> -->
 
 
 </html>
