before angular loaded more than once

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <!doctype html>
 <html lang="en" ng-app="sighting" ng-strict-di>
 <head>
-  <meta charset="utf-8">
   <title>Svalbard Marine Mammal Sightings</title>
   <!--base href - needed for routing $locationProvider -->
   <base href="/sighting/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="./npdc-sighting-routes-latest.css">
 
 
@@ -29,9 +28,9 @@
 
 
 <!--Menu -->
+
 <header>
   <a href="http://www.npolar.no/no/tjenester/mms/index.html" id="logo"></a>
-
 
 <nav id="nav_id">
 <a href="#" id="menu-icon"></a>
@@ -45,6 +44,7 @@
 </ul>
 </nav>
 
+
 </header>
 <section>
 <div ng-view></div>
@@ -54,11 +54,11 @@
 <!--<script lang="javascript" src="/assets/shim.js"></script>
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
-<script lang="javascript" src="/assets/ods.js"></script>
-<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
-<script src="/assets/angular-simple-logger/dist/angular-simple-logger.js"></script>
- <script src="/assets/angular-leaflet-directive.js"></script>
-  <script src="/assets/leaflet.draw.js"></script> -->
+<script lang="javascript" src="/assets/ods.js"></script> -->
+<!--<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script> -->
+<!--<script src="/assets/angular-simple-logger/dist/angular-simple-logger.js"></script> -->
+<!--<script src="/assets/angular-leaflet-directive.js"></script>-->
+<!-- <script src="/assets/leaflet.draw.js"></script> -->
 
 
 </html>
