--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
 <![endif]-->
 <!--[if gt IE 8]><!-->
 <!--  <link rel="stylesheet" href="/assets/leaflet.css">  -->
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
- <!-- <link rel="stylesheet" href="/assets/leaflet.draw.css">  -->
+ <!-- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css"> -->
+  <link rel="stylesheet" href="/assets/leaflet.css" />
+  <link rel="stylesheet" href="/assets/leaflet.draw.css">
   <link rel="stylesheet" href="/assets/grids-responsive-min.css">
   <link rel="stylesheet" href="/assets/formula.min.css">
   <!--<![endif]-->
@@ -51,14 +52,14 @@
 
 </section>
 <script src="app.js"></script>
-<!--<script lang="javascript" src="/assets/shim.js"></script>
+<!-- <script lang="javascript" src="/assets/shim.js"></script>
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
 <script lang="javascript" src="/assets/ods.js"></script> -->
-<!--<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script> -->
+<script src="/assets/leaflet.js"></script>
 <!--<script src="/assets/angular-simple-logger/dist/angular-simple-logger.js"></script> -->
-<!--<script src="/assets/angular-leaflet-directive.js"></script>-->
-<!-- <script src="/assets/leaflet.draw.js"></script> -->
+<script src="/assets/angular-leaflet-directive.js"></script>
+<script src="/assets/leaflet.draw.js"></script>
 
 
 </html>
