my observations search fixed

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 <li><a href ng-click="panel.choosePath('species')" class="menu">Species</a></li>
 <li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('observers')" class="menu">Observers</a></li>
 <li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('my_observations')" class="menu">My observations</a></li>
-<li ng-if="security.isAuthenticated()"><a href ng-click="panel.choosePath('admin')" class="menu">Administrators</a></li>
+<li ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('admin')" class="menu">Administrators</a></li>
 </ul>
 </nav>
 
