--- a/src/index.html
+++ b/src/index.html
@@ -52,10 +52,10 @@
 
 </section>
 <script src="app.js"></script>
-<!-- <script lang="javascript" src="/assets/shim.js"></script>
+<script lang="javascript" src="/assets/shim.js"></script>
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
-<script lang="javascript" src="/assets/ods.js"></script> -->
+<script lang="javascript" src="/assets/ods.js"></script>
 <script src="/assets/leaflet.js"></script>
 <!--<script src="/assets/angular-simple-logger/dist/angular-simple-logger.js"></script> -->
 <script src="/assets/angular-leaflet-directive.js"></script>
