--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 
 </section>
 <script src="app.js"></script>
-<script lang="javascript" src="/assets/shim.js"></script>
+<!--<script lang="javascript" src="/assets/shim.js"></script> -->
 <script lang="javascript" src="/assets/jszip.js"></script>
 <script lang="javascript" src="/assets/xlsx.js"></script>
 <script lang="javascript" src="/assets/ods.js"></script>
