leaflet.draw.css loaded

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="/assets/grids-responsive-old-ie-min.css">
 <![endif]-->
 <!--[if gt IE 8]><!-->
-<!--  <link rel="stylesheet" href="/assets/leaflet.css">  -->
+  <link rel="stylesheet" href="/assets/leaflet.css">
+  <link rel="stylesheet" href="/assets/leaflet.draw.css">
  <!-- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css"> -->
   <!--<![endif]-->
 
