--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 
 
   <!--[if lte IE 8]>
-    <link rel="stylesheet" href="/assets/grids-responsive-old-ie-min.css">
+    <link rel="stylesheet" href="assets/grids-responsive-old-ie-min.css">
 <![endif]-->
 <!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="/assets/leaflet.css">
-  <link rel="stylesheet" href="/assets/leaflet.draw.css">
+  <link rel="stylesheet" href="assets/leaflet.css">
+  <link rel="stylesheet" href="assets/leaflet.draw.css">
  <!-- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css"> -->
   <!--<![endif]-->
 
@@ -48,14 +48,14 @@
 
 </section>
 <script src="app.js"></script>
-<!--<script lang="javascript" src="/assets/shim.js"></script> -->
-<script lang="javascript" src="/assets/jszip.js"></script>
-<script lang="javascript" src="/assets/xlsx.js"></script>
-<script lang="javascript" src="/assets/ods.js"></script>
-<script src="/assets/leaflet.js"></script>
-<!--<script src="/assets/angular-simple-logger/dist/angular-simple-logger.js"></script> -->
-<script src="/assets/angular-leaflet-directive.js"></script>
-<script src="/assets/leaflet.draw.js"></script>
+<!--<script lang="javascript" src="assets/shim.js"></script> -->
+<script lang="javascript" src="assets/jszip.js"></script>
+<script lang="javascript" src="assets/xlsx.js"></script>
+<script lang="javascript" src="assets/ods.js"></script>
+<script src="assets/leaflet.js"></script>
+<!--<script src="assets/angular-simple-logger/dist/angular-simple-logger.js"></script> -->
+<script src="assets/angular-leaflet-directive.js"></script>
+<script src="assets/leaflet.draw.js"></script>
 
 
 </html>
