obaserver working w/duplicates

--- a/src/index.html
+++ b/src/index.html
@@ -47,13 +47,12 @@
 <div ng-view></div>
 
 </section>
-<script src="app.js"></script>
+<script lang="javascript"  src="app.js"></script>
 <!--<script lang="javascript" src="assets/shim.js"></script> -->
 <script lang="javascript" src="assets/jszip.js"></script>
 <script lang="javascript" src="assets/xlsx.js"></script>
 <script lang="javascript" src="assets/ods.js"></script>
 <script src="assets/leaflet.js"></script>
-<!--<script src="assets/angular-simple-logger/dist/angular-simple-logger.js"></script> -->
 <script src="assets/angular-leaflet-directive.js"></script>
 <script src="assets/leaflet.draw.js"></script>
 
