pagination missing css

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
 <script src="assets/leaflet.js"></script>
 <script src="assets/angular-leaflet-directive.js"></script>
 <script src="assets/leaflet.draw.js"></script>
+<script src="assets/smart-table.min.js"></script>
+
 
 
 </html>
