pagination added with bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <!--[if gt IE 8]><!-->
   <link rel="stylesheet" href="assets/leaflet.css">
   <link rel="stylesheet" href="assets/leaflet.draw.css">
- <!-- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!--<![endif]-->
 
 </head>
