--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
 <div ng-view></div>
 
 </section>
+<!-- @if PROD -->
+<script src="/assets/npdc-common-<!-- @echo COMMON_VERSION -->.js"></script>
+<!-- @endif -->
 <script lang="javascript"  src="app.js"></script>
 <!--<script lang="javascript" src="assets/shim.js"></script> -->
 <script lang="javascript" src="assets/jszip.js"></script>
@@ -58,5 +61,5 @@
 <script src="assets/smart-table.min.js"></script>
 
 
-
+</body>
 </html>
