--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 <li class="menu"><a href ng-click="panel.choosePath('login')" class="current">Login</a></li>
 <li class="menu"><a href ng-click="panel.choosePath('observe')" class="menu">Become observer</a></li>
 <li class="menu"><a href ng-click="panel.choosePath('species')" class="menu">Species</a></li>
-<li class="menu" ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('observers')" class="menu">Observers</a></li>
+<!-- <li class="menu" ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('observers')" class="menu">Observers</a></li> -->
 <li class="menu" ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('my_observations')" class="menu">My observations</a></li>
 <li class="menu" ng-show="security.isAuthenticated()"><a href ng-click="panel.choosePath('admin')" class="menu">Administrators</a></li>
 </ul>
