--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <!--base href - needed for routing $locationProvider -->
   <base href="/sighting/" />
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="./npdc-sighting-routes-latest.css">
+   <link rel="stylesheet" href="./npdc-sighting-routes-latest.css">
+    <link href="/assets/npdc-common-<!-- @echo COMMON_VERSION -->.css" rel="stylesheet">
+
 
 
   <!--[if lte IE 8]>
@@ -14,7 +16,7 @@
 <!--[if gt IE 8]><!-->
   <link rel="stylesheet" href="assets/leaflet.css">
   <link rel="stylesheet" href="assets/leaflet.draw.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!--<![endif]-->
 
 </head>
